// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewCourseButton learner does not have access to course snapshot 1`] = `
<ActionButton
  as="a"
  disabled={true}
  href="#"
  onClick={
    Object {
      "trackCourseEvent": Object {
        "cardId": "cardId",
        "eventName": [MockFunction segment.enterCourseClicked],
        "upgradeUrl": "homeUrl",
      },
    }
  }
>
  View Course
</ActionButton>
`;

exports[`ViewCourseButton learner has access to course snapshot 1`] = `
<ActionButton
  as="a"
  disabled={false}
  href="#"
  onClick={
    Object {
      "trackCourseEvent": Object {
        "cardId": "cardId",
        "eventName": [MockFunction segment.enterCourseClicked],
        "upgradeUrl": "homeUrl",
      },
    }
  }
>
  View Course
</ActionButton>
`;
